--- a/src/sign-in/sign-in.css
+++ b/src/sign-in/sign-in.css
@@ -1,52 +1,52 @@
+/* Global styles */
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
+.font-poppins {
+  font-family: 'Poppins', sans-serif;
+}
+
+
+/* Sign-in component styles */
 .signin-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
-  background-color: #fff; 
+  height: 100vh;
 }
 
 .signin-form {
-  background-color: #283944; 
-  border-radius: 26px;
-  padding: 40px;
-  width: 320px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  width: 100%;
+  padding: 2rem;
+  border: 1px solid #3b82f6;
+  border-radius: 1rem;
 }
 
-.form-group {
-  margin-bottom: 24px;
-}
-
-label {
-  font-size: 14px;
-  font-weight: 500;
-}
 
 .input-group {
   position: relative;
-  max-width: 270px;
 }
 
-.input-group .form-control {
-  padding-left: 40px;
+.form-control {
+  padding-right: 2.5rem; /* Adjust padding to accommodate icon */
+  font-size: 1rem;
+  border-radius: 0.375rem;
+  border: 1px solid #3b82f6;
+  width: 100%;
 }
 
-.input-icon {
+.input-group .input-icon {
   position: absolute;
+  right: 0.5rem;
   top: 50%;
-  left: 10px; /* Adjusted to align with the input */
   transform: translateY(-50%);
-  color: #3498db; /* Blue color */
+  font-size: 0.75rem;
+  color: #a0aec0;
 }
 
-.input-icon.lock {
-  color: #e74c3c; /* Red color for lock icon */
-}
 
-.input-icon.user {
-  color: #27ae60; /* Green color for user icon */
-}
 
 .remember-me {
   display: flex;
@@ -54,38 +54,56 @@ label {
 }
 
 .remember-checkbox {
-  margin-right: 8px;
+  margin-right: 0.5rem;
 }
 
 .forgot-password {
-  font-size: 14px;
-  color: #3498db; /* Blue color */
+  text-decoration: none;
+  color: #4299e1;
 }
 
 .btn {
-  width: 100%;
-  padding: 12px;
-  border-radius: 26px;
+  padding: 0.75rem 1rem;
+  font-size: 1rem;
+  border-radius: 0.375rem;
   cursor: pointer;
-  background-color: #7ab9e2; /* Blue color */
-  color: #fff;
   border: none;
 }
 
-.btn-secondary {
-  background-color: #2c3e50; /* Dark gray color */
+.btn-primary {
+  background-color: #3b82f6;
+  color: #fff;
 }
 
-.terms {
-  font-size: 12px;
-  margin-top: 16px;
+.btn-secondary {
+  background-color: #e2e8f0;
+  color: #4a5568;
+}
+
+.terms-condition {
+  font-size: 0.875rem;
+  color: #a0aec0;
 }
 
 .register-link {
-  margin-top: 24px;
-  font-size: 14px;
+  margin-top: 1rem;
+  text-align: center;
+}
+
+.register-link p {
+  margin-bottom: 0;
 }
 
 .register {
-  color: #3498db; /* Blue color */
+  color: #4299e1;
+  text-decoration: none;
+}
+
+.social-btn {
+  margin-right: 1rem;
+}
+
+.social-icon {
+  width: 25px; /* Adjust icon size */
+  margin-top: 3px;
 }
