centred sign in header

--- a/src/sign-in/sign-in.css
+++ b/src/sign-in/sign-in.css
@@ -3,7 +3,13 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
-p{
+h1 {
+text-align: center;
+font-weight: bold;
+margin-bottom: 15px;
+}
+
+p {
   margin-bottom: 15px;
   margin-top: 10px;
 }
